# KernelSmith

./: .gitignore  CMakeLists.txt  README.md
lib/Dialect/: CMakeLists.txt
lib/Dialect/Diss/: CMakeLists.txt  DissAttrDefs.td  DissDialect.cpp  DissDialect.h  DissDialect.td  DissOps.cpp  DissOps.h  DissOps.td  DissTypes.h  DissTypes.td
lib/Dialect/Diss/Dialect/: CMakeLists.txt  DissDialect.cpp  DissDialect.h  DissOps.cpp  DissOps.h  DissOps.td  DissTypes.h  DissTypes.td
lib/Dialect/Diss/Transforms/: CMakeLists.txt  Passes.cpp  Passes.h  Passes.td
lib/Dialect/DissGPU/Dialect/: CMakeLists.txt  DissGPUDialect.cpp  DissGPUDialect.h  DissGPUDialect.td
scripts/: test.py
scripts/python/: README.md  compiler.py  jit.py
tests/: diss_sintax.mlir  reorder_pass.mlir
tools/: CMakeLists.txt  diss-opt.cpp
